# cpp-easy-file-stream

./: CMakeLists.txt  README.md  fs.hpp  main.cpp  test.txt
.github/workflows/: msvc-analysis.yml
test/: CMakeLists.txt  test.cpp
